--- a/notebooks/codecontests_exploration.ipynb
+++ b/notebooks/codecontests_exploration.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +217,71 @@
    "source": [
     "test_df = Dataset.from_parquet(\"../dataset_samples/codeforces_problems_subset.parquet\")\n",
     "test_df[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 36\u001b[0m\n\u001b[1;32m      1\u001b[0m test_code \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124mdef solution(problem_input):\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m    n, m, k = map(int, problem_input[0].split())\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;124m    return results\u001b[39m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m---> 36\u001b[0m evaluate_python_code_exec(test_code, \u001b[43mtest_df\u001b[49m[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpublic_tests\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minput\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'test_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "test_code = \"\"\"\n",
+    "def solution(problem_input):\n",
+    "    n, m, k = map(int, problem_input[0].split())\n",
+    "    edges = [list(map(int, line.split())) for line in problem_input[1:]]\n",
+    "\n",
+    "    adj = [[] for _ in range(n + 1)]\n",
+    "\n",
+    "    results = []\n",
+    "    for i in range(m):\n",
+    "        adj[edges[i][0]].append(edges[i][1])\n",
+    "        adj[edges[i][1]].append(edges[i][0])\n",
+    "\n",
+    "        max_people = 0\n",
+    "        for j in range(1 << n):\n",
+    "            group = []\n",
+    "            for bit in range(n):\n",
+    "                if (j >> bit) & 1:\n",
+    "                    group.append(bit + 1)\n",
+    "\n",
+    "            valid_group = True\n",
+    "            for person in group:\n",
+    "                friend_count = 0\n",
+    "                for friend in adj[person]:\n",
+    "                    if friend in group:\n",
+    "                        friend_count += 1\n",
+    "                if friend_count < k:\n",
+    "                    valid_group = False\n",
+    "                    break\n",
+    "\n",
+    "            if valid_group:\n",
+    "                max_people = max(max_people, len(group))\n",
+    "        results.append(max_people)\n",
+    "    return results\n",
+    "\"\"\"\n",
+    "\n",
+    "tests = {\n",
+    "    \"input\": [\n",
+    "        \"4 4 2\\n2 3\\n1 2\\n1 3\\n1 4\\n\",\n",
+    "        \"5 8 2\\n2 1\\n4 2\\n5 4\\n5 2\\n4 3\\n5 1\\n4 1\\n3 2\\n\",\n",
+    "        \"5 7 2\\n1 5\\n3 2\\n2 5\\n3 4\\n1 2\\n5 3\\n1 3\\n\",\n",
+    "    ],\n",
+    "    \"output\": [\"0\\n0\\n3\\n3\\n\", \"0\\n0\\n0\\n3\\n3\\n4\\n4\\n5\\n\", \"0\\n0\\n0\\n0\\n3\\n4\\n4\\n\"],\n",
+    "}\n",
+    "\n",
+    "evaluate_python_code_exec(test_code, test_df[0][\"public_tests\"][\"input\"])"
    ]
   }
  ],
