--- a/notebooks/codecontests_exploration.ipynb
+++ b/notebooks/codecontests_exploration.ipynb
@@ -221,18 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'test_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 36\u001b[0m\n\u001b[1;32m      1\u001b[0m test_code \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124mdef solution(problem_input):\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m    n, m, k = map(int, problem_input[0].split())\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;124m    return results\u001b[39m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m---> 36\u001b[0m evaluate_python_code_exec(test_code, \u001b[43mtest_df\u001b[49m[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpublic_tests\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minput\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'test_df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['passed']\n",
+      "['passed']\n",
+      "['passed']\n"
      ]
     }
    ],
@@ -281,7 +279,10 @@
     "    \"output\": [\"0\\n0\\n3\\n3\\n\", \"0\\n0\\n0\\n3\\n3\\n4\\n4\\n5\\n\", \"0\\n0\\n0\\n0\\n3\\n4\\n4\\n\"],\n",
     "}\n",
     "\n",
-    "evaluate_python_code_exec(test_code, test_df[0][\"public_tests\"][\"input\"])"
+    "for test_input in tests[\"input\"]:\n",
+    "    ti = test_input.strip().split(\"\\n\")\n",
+    "    out = evaluate_python_code_exec(test_code + f\"solution({ti})\")\n",
+    "    print(out)"
    ]
   }
  ],
