--- a/notebooks/llm_ft_dev.ipynb
+++ b/notebooks/llm_ft_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,7 @@
     "import sys\n",
     "from datasets import load_dataset\n",
     "import torch\n",
+    "from trl.trainer.dpo_trainer import DPOTrainer\n",
     "\n",
     "sys.path.append('..')\n",
     "from model.causal_lm import AutoLMFineTuner\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = LMHyperParams(base_model_checkpoint=\"Qwen/Qwen2.5-0.5B\")\n",
-    "model = AutoLMFineTuner(params)"
+    "model = AutoLMFineTuner(params)\n",
+    "peft_config = LoraConfig(\n",
+    "        lora_alpha=128,\n",
+    "        lora_dropout=0.05,\n",
+    "        r=256,\n",
+    "        bias=\"none\",\n",
+    "        target_modules=\"all-linear\",\n",
+    "        task_type=\"CAUSAL_LM\", \n",
+    ")\n"
    ]
   }
  ],
