--- a/notebooks/llm_ft_dev.ipynb
+++ b/notebooks/llm_ft_dev.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
     "data_module = UltraFeedbackDataModule(2, model.tokenizer, 1024, 10)\n",
     "if os.path.exists(data_module.cache_dir):\n",
     "    shutil.rmtree(data_module.cache_dir)\n",
-    "data_module.cpu_count = 12\n",
+    "data_module.num_workers = 12\n",
     "data_module.setup(\"fit\")"
    ]
   },
